fix text align

--- a/_sass/bootstrap.scss
+++ b/_sass/bootstrap.scss
@@ -33,7 +33,7 @@ article img {
   border-radius: 5px;
 }
 
-body{
+p{
   text-align: justify;
 }
 
